fixed nav bar overlap issue

--- a/EdmondsWebsite/edmonds.css
+++ b/EdmondsWebsite/edmonds.css
@@ -138,6 +138,7 @@ a:focus {
     display: inline-block;
     padding: 0 20px;
     line-height: 50px;
+    white-space: nowrap; 
 }
 
 /*--------------------------
